# simdutf

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  Doxyfile  LICENSE-APACHE  Makefile  Makefile.crosscompile  Package.swift  README.md  SECURITY.md  ablationscript.sh  annotated.html  annotated_dup.js  ascii_8h_source.html  atomic__util_8h_source.html  avx512_8h_source.html  base64_8h_source.html  base64__implementation_8h_source.html  base64__tables_8h_source.html  bench.c  benchframework.c  benchmark.c  benchmark.h  benchmark_2022-06-22_ba6c9db.out  benchmark_2022-06-23_07785c3.out  benchmark_2022-07-11_1044d7e.out  benchmark_2022-07-11_176c05d.out  benchmark_2022-07-11_2f8c8ff.out  benchmark_2022-07-11_403cf1b.out  benchmark_2022-07-11_f53e0f9.out  benchmark_2022-07-11_fccdace.out  classes.html  classsimdutf_1_1implementation-members.html  classsimdutf_1_1implementation.html  classsimdutf_1_1implementation.js  common__defs_8h_source.html  compiler__check_8h_source.html  (+123 more)
benchmarks/: CMakeLists.txt  alignment.cpp  benchmark.cpp  benchmark_to_well_formed_utf16.cpp  shortbench.cpp  stream.cpp  threaded.cpp
benchmarks/base64/: CMakeLists.txt  arm_base64_spaces.h  benchmark_base64.cpp  libbase64_spaces.h  node_base64.h  openssl3_base64.h
benchmarks/competition/: .clang-format-ignore  README.md
benchmarks/dataset/: README.md  emoji.txt
benchmarks/find/: CMakeLists.txt  findbenchmark.cpp  findbenchmarker.h
benchmarks/src/: CMakeLists.txt  apple_arm_events.h  benchmark.cpp  benchmark.h  benchmark_base.cpp  benchmark_base.h  cmdline.cpp  cmdline.h  event_counter.h  linux-perf-events.h
fuzz/: .clang-format  .gitignore  CMakeLists.txt  README.md  atomic_base64.cpp  base64.cpp  base64_details.cpp  build.sh  conversion.cpp  find.cpp  main.cpp  minimize_and_cleanse.sh  misc.cpp  random_fuzz.sh  roundtrip.cc  roundtrip.cpp  roundtrip_utf16.cc  roundtrip_utf32.cc  roundtrip_utf8.cc  safe_conversion.cpp  validation.cpp  with_replacement.cpp
fuzz/helpers/: .clang-format-ignore  common.h
include/: CMakeLists.txt  module.modulemap  simdutf.h  simdutf_c.h
include/simdutf/: avx512.h  base64_implementation.h  base64_tables.h  common_defs.h  compiler_check.h  constexpr_ptr.h  encoding_types.h  error.h  fallback.h  haswell.h  implementation.h  inlineable.h  normalization_types.h  portability.h  ppc64.h  result.h  simdutf.h  simdutf_c.h  simdutf_version.h  westmere.h
singleheader/: .flake8  CMakeLists.txt  README-dev.md  README.md  amalgamate.py  amalgamation_demo.c  amalgamation_demo.cpp  test-features.py
src/: CMakeLists.txt  encoding_types.cpp  error.cpp  implementation.cpp  result.cpp  simdutf.cpp  simdutf_c.cpp
src/arm64/: arm_base64.cpp  arm_convert_latin1_to_utf16.cpp  arm_convert_latin1_to_utf32.cpp  arm_convert_latin1_to_utf8.cpp  arm_convert_utf16_to_latin1.cpp  arm_convert_utf16_to_utf32.cpp  arm_convert_utf16_to_utf8.cpp  arm_convert_utf32_to_latin1.cpp  arm_convert_utf32_to_utf16.cpp  arm_convert_utf32_to_utf8.cpp  arm_convert_utf8_to_latin1.cpp  arm_convert_utf8_to_utf16.cpp  arm_convert_utf8_to_utf32.cpp  arm_detect_encodings.cpp  arm_find.cpp  arm_normalize_helpers.cpp  arm_normalize_utf16_to_composed.cpp  arm_normalize_utf16_to_decomposed.cpp  arm_normalize_utf8_helpers.cpp  arm_normalize_utf8_to_composed.cpp  arm_normalize_utf8_to_decomposed.cpp  arm_utf16fix.cpp  arm_validate_utf16.cpp  arm_validate_utf16le.cpp  arm_validate_utf32le.cpp  implementation.cpp
src/avx512bw/: avx512bw-constants.inl.cpp  avx512bw-from-utf8.inl.cpp  avx512bw-from-valid-utf8.inl.cpp  avx512bw-macros.inl.cpp  avx512bw-utf8-common.inl.cpp  avx512bw-utf8-validation.inl.cpp  implementation.cpp
src/avx512vbmi/: implementation.cpp
src/fallback/: implementation.cpp
src/generic/: ascii_validation.h  base64.h  base64lengths.h  buf_block_reader.h  find.h  utf16.h  utf32.h  utf8.h  validate_utf16.h  validate_utf32.h
src/haswell/: avx2_base64.cpp  avx2_convert_latin1_to_utf16.cpp  avx2_convert_latin1_to_utf32.cpp  avx2_convert_latin1_to_utf8.cpp  avx2_convert_utf16_to_latin1.cpp  avx2_convert_utf16_to_utf32.cpp  avx2_convert_utf16_to_utf8.cpp  avx2_convert_utf32_to_latin1.cpp  avx2_convert_utf32_to_utf16.cpp  avx2_convert_utf32_to_utf8.cpp  avx2_convert_utf8_to_latin1 AVX2.cpp  avx2_convert_utf8_to_latin1 unrolled version based on SSE.cpp  avx2_convert_utf8_to_latin1.cpp  avx2_convert_utf8_to_utf16.cpp  avx2_convert_utf8_to_utf32.cpp  avx2_detect_encodings.cpp  avx2_op_autodetect_encoding.cpp  avx2_op_autodetect_encodings.cpp  avx2_utf16fix.cpp  (+7 more)
tests/: CMakeLists.txt  atomic_base64_tests.cpp  autodetect_constexpr_tests.cpp  base64_tests.cpp  basic_fuzzer.cpp  bele_tests.cpp  constexpr_base64_tests.cpp  convert_latin1_to_utf16be_tests.cpp  convert_latin1_to_utf16le_tests.cpp  convert_latin1_to_utf32.cpp  convert_latin1_to_utf32_tests.cpp  convert_latin1_to_utf8_tests.cpp  convert_utf16_to_utf32_tests.cpp  convert_utf16_to_utf8_safe_tests.cpp  convert_utf16_to_utf8_tests.cpp  convert_utf16_to_utf8_with_replacement_tests.cpp  convert_utf16be_to_latin1_tests.cpp  convert_utf16be_to_latin1_tests_with_errors.cpp  convert_utf16be_to_utf32_tests.cpp  convert_utf16be_to_utf32_with_errors_tests.cpp  convert_utf16be_to_utf8_tests.cpp  convert_utf16be_to_utf8_with_errors_tests.cpp  convert_utf16le_to_latin1_tests.cpp  convert_utf16le_to_latin1_tests_with_errors.cpp  convert_utf16le_to_utf32_tests.cpp  convert_utf16le_to_utf32_with_errors_tests.cpp  convert_utf16le_to_utf8_tests.cpp  convert_utf16le_to_utf8_with_errors_tests.cpp  convert_utf32_to_latin1.cpp  convert_utf32_to_latin1_tests.cpp  convert_utf32_to_latin1_with_errors_tests.cpp  convert_utf32_to_utf16_tests.cpp  convert_utf32_to_utf16be_tests.cpp  convert_utf32_to_utf16be_with_errors_tests.cpp  convert_utf32_to_utf16le_tests.cpp  convert_utf32_to_utf16le_with_errors_tests.cpp  convert_utf32_to_utf8_tests.cpp  convert_utf32_to_utf8_with_errors_tests.cpp  convert_utf8_to_latin1_tests.cpp  convert_utf8_to_latin1_tests_with_errors.cpp  (+72 more)
tools/: CMakeLists.txt  fastbase64.1  fastbase64.cpp  sutf.cpp  sutf.h
(+1719 files in other folders)
